--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,8 +20,8 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/helmet": "^4.0.0",
     "@types/node": "^22.15.3",
     "eslint": "^9.33.0",
