--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
-    "build:verbose": "echo '🔍 Root Build Environment:' && echo 'Node Version:' && node --version && echo 'Yarn Version:' && yarn --version && echo 'TypeScript Version:' && npx tsc --version && echo '📦 Building all packages...' && turbo run build",
+    "build:verbose": "echo '🔍 Root Build Environment:' && echo 'Node Version:' && node --version && echo 'PNPM Version:' && pnpm --version && echo 'TypeScript Version:' && npx tsc --version && echo '📦 Building all packages...' && turbo run build",
     "build:frontend": "turbo run build --filter=frontend",
     "build:backend": "turbo run build --filter=backend",
     "build:docs": "turbo run build --filter=docs",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "seed-db": "node scripts/seed-db.js"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
@@ -19,19 +20,20 @@
   "engines": {
     "node": ">=20.x"
   },
-  "packageManager": "yarn@1.22.22",
-  "overrides": {
-    "typescript": "5.9.2"
+  "packageManager": "pnpm@9.0.0",
+  "pnpm": {
+    "overrides": {
+      "typescript": "5.9.2",
+      "zod": "4.1.3"
+    }
   },
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
-  "resolutions": {
-    "zod": "4.1.3"
-  },
   "description": "Tournament Management System",
   "dependencies": {
+    "node-fetch": "^3.3.2",
     "turbo": "^2.5.6",
     "vaul": "^1.1.2",
     "vercel": "^46.0.2"
