--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -12,19 +12,16 @@
     }
   },
   "scripts": {
-    "build": "echo '🔍 Build Environment Info:' && echo 'Node Version:' && node --version && echo 'Package Manager:' && yarn --version && echo 'TypeScript Version:' && npx tsc --version && echo '📦 Building schemas package...' && tsc",
+    "build": "echo '🔍 Build Environment Info:' && echo 'Node Version:' && node --version && echo 'Package Manager:' && pnpm --version && echo 'TypeScript Version:' && npx tsc --version && echo '📦 Building schemas package...' && tsc",
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "typescript": "5.9.2",
     "zod": "4.1.3"
   },
   "dependencies": {
     "zod": "4.1.3"
-  },
-  "overrides": {
-    "typescript": "5.9.2"
   }
 }
