--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -67,8 +67,8 @@
     "vaul": "^1.0.0"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "eslint": "^9.33.0",
