--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build:docs": "turbo run build --filter=docs",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types",
-    "seed-db": "node scripts/seed-db.js"
+    "check-types": "turbo run check-types"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
@@ -34,6 +33,7 @@
   "description": "Tournament Management System",
   "dependencies": {
     "node-fetch": "^3.3.2",
+    "sonner": "^2.0.7",
     "turbo": "^2.5.6",
     "vaul": "^1.1.2",
     "vercel": "^46.0.2"
