--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,13 +16,15 @@
     "@repo/ui": "workspace:*",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^3.0.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "firebase": "^10.7.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.344.0",
-    "@types/bcrypt": "^5.0.2",
-    "bcrypt": "^6.0.0",
     "mongodb": "^6.3.0",
     "next": "^15.4.2",
     "react": "^18.2.0",
@@ -31,6 +33,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.1",
     "remark-gfm": "^4.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.2.1",
     "wouter": "^3.4.2",
     "zustand": "^5.0.8"
