--- a/vercel.json
+++ b/vercel.json
@@ -4,18 +4,21 @@
   "installCommand": "pnpm install",
   "framework": "nextjs",
   "outputDirectory": "apps/frontend/.next",
-  "rootDirectory": "apps/frontend",
   "functions": {
     "apps/frontend/app/api/**/*.ts": {
       "runtime": "nodejs20.x"
     }
   },
   "env": {
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "MONGODB_URI": "@mongodb_uri",
+    "MONGODB_DATABASE": "@mongodb_database"
   },
   "build": {
     "env": {
-      "NODE_ENV": "production"
+      "NODE_ENV": "production",
+      "MONGODB_URI": "@mongodb_uri",
+      "MONGODB_DATABASE": "@mongodb_database"
     }
   },
   "rewrites": [
