--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "buildCommand": "cd ../.. && pnpm install && pnpm run build:frontend",
-  "installCommand": "cd ../.. && pnpm install && cd apps/frontend && pnpm install",
+  "installCommand": "cd ../.. && pnpm install",
   "framework": "nextjs",
   "env": {
     "NODE_ENV": "production",
