--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -17,11 +17,10 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-    "typescript": "5.9.2",
-    "zod": "4.1.3"
+    "@repo/typescript-config": "workspace:*"
   },
   "dependencies": {
+    "typescript": "5.9.2",
     "zod": "4.1.3"
   }
 }
