--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,7 @@
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [".next/**", "!.next/cache/**", "dist/**", "build/**"],
-      "env": ["MONGODB_URI", "MONGODB_DATABASE"]
+      "env": ["MONGODB_URI", "MONGODB_DATABASE", "NODE_ENV"]
     },
     "lint": {
       "dependsOn": ["^lint"]
@@ -17,7 +17,7 @@
     "dev": {
       "cache": false,
       "persistent": true,
-      "env": ["MONGODB_URI", "MONGODB_DATABASE"]
+      "env": ["MONGODB_URI", "MONGODB_DATABASE", "NODE_ENV"]
     }
   }
 }
