--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -48,6 +48,7 @@
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^9.33.0",
+    "eslint-config-next": "16.0.0",
     "playwright": "^1.54.2",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
