--- a/apps/frontend/public/manifest.json
+++ b/apps/frontend/public/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "Tourna-X - AI-Powered Tournament Management",
+  "name": "Tourna-X - Tournament Management",
   "short_name": "Tourna-X",
-  "description": "Intelligent tournament management system with AI insights for badminton and tennis",
+  "description": "Modern tournament management system for badminton and tennis",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#f8fafc",
+  "background_color": "#ffffff",
   "theme_color": "#3b82f6",
   "orientation": "portrait-primary",
   "categories": ["sports", "utilities", "productivity"],
