--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "build:docs": "turbo run build --filter=docs",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "dump-db": "node scripts/dump-db.js",
+    "restore-db": "node scripts/restore-db.js",
+    "dump-db-native": "node scripts/dump-db-native.js",
+    "restore-db-native": "node scripts/restore-db-native.js"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
@@ -32,6 +36,7 @@
   ],
   "description": "Tournament Management System",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "node-fetch": "^3.3.2",
     "sonner": "^2.0.7",
     "turbo": "^2.5.6",
